Ajout photos portraits dans les témoignages

--- a/index.html
+++ b/index.html
@@ -983,14 +983,8 @@
       width: 48px;
       height: 48px;
       border-radius: 50%;
-      background: linear-gradient(135deg, var(--cream-dark), var(--cream));
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-family: 'Playfair Display', serif;
-      font-size: 1.1rem;
-      font-weight: 600;
-      color: var(--navy);
+      object-fit: cover;
+      flex-shrink: 0;
     }
 
     .temoignage-name {
@@ -1824,7 +1818,7 @@
             Le cabinet Beaumont nous a accompagn&eacute;s dans l'acquisition de notre immeuble de rapport &agrave; Lyon 3e. Leur vigilance sur les clauses du compromis nous a &eacute;vit&eacute; un litige potentiel de plus de 40 000 euros. Un professionnalisme remarquable.
           </p>
           <div class="temoignage-author">
-            <div class="temoignage-avatar">PD</div>
+            <img class="temoignage-avatar" src="img/philippe.jpg" alt="Philippe Durand" loading="lazy">
             <div>
               <div class="temoignage-name">Philippe Durand</div>
               <div class="temoignage-role">Investisseur immobilier</div>
@@ -1844,7 +1838,7 @@
             Apr&egrave;s la d&eacute;couverte de vices cach&eacute;s dans notre maison, Ma&icirc;tre Beaumont a pris en charge notre dossier avec une efficacit&eacute; impressionnante. Gr&acirc;ce &agrave; son expertise, nous avons obtenu une indemnisation int&eacute;grale en moins de six mois.
           </p>
           <div class="temoignage-author">
-            <div class="temoignage-avatar">SM</div>
+            <img class="temoignage-avatar" src="img/sophie.jpg" alt="Sophie Martin-Lacroix" loading="lazy">
             <div>
               <div class="temoignage-name">Sophie Martin-Lacroix</div>
               <div class="temoignage-role">Propri&eacute;taire &agrave; Villeurbanne</div>
@@ -1864,7 +1858,7 @@
             En tant que promoteur, je travaille avec le cabinet Beaumont depuis plus de cinq ans. Leur connaissance du droit de la construction et leur r&eacute;activit&eacute; en font un partenaire incontournable pour s&eacute;curiser nos op&eacute;rations.
           </p>
           <div class="temoignage-author">
-            <div class="temoignage-avatar">JR</div>
+            <img class="temoignage-avatar" src="img/jeanmarc.jpg" alt="Jean-Marc Rousseau" loading="lazy">
             <div>
               <div class="temoignage-name">Jean-Marc Rousseau</div>
               <div class="temoignage-role">Directeur, Rousseau Promotion</div>
