Correction des accents français

--- a/index.html
+++ b/index.html
@@ -1669,9 +1669,9 @@
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="6" width="20" height="14" rx="2"/><path d="M2 10h20"/><path d="M6 6V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v2"/><line x1="10" y1="14" x2="14" y2="14"/></svg>
           </div>
           <h3>Droit de la construction</h3>
-          <p>Accompagnement des ma&icirc;tres d'ouvrage et constructeurs face aux malfacons, d&eacute;sordres et litiges. Mise en &oelig;uvre des garanties d&eacute;cennale, biennale et de parfait ach&egrave;vement.</p>
+          <p>Accompagnement des ma&icirc;tres d'ouvrage et constructeurs face aux malfa&ccedil;ons, d&eacute;sordres et litiges. Mise en &oelig;uvre des garanties d&eacute;cennale, biennale et de parfait ach&egrave;vement.</p>
           <div class="expertise-tags">
-            <span class="expertise-tag">Malfacons</span>
+            <span class="expertise-tag">Malfa&ccedil;ons</span>
             <span class="expertise-tag">Garantie d&eacute;cennale</span>
             <span class="expertise-tag">R&eacute;ception des travaux</span>
           </div>
